--- a/src/Protfolio/main.css
+++ b/src/Protfolio/main.css
@@ -1,351 +1,322 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Merriweather:wght@300&display=swap');
-
+@import '~react-image-gallery/styles/css/image-gallery.css';
 
 body {
-    background-image: linear-gradient(to right bottom, #e8f3ec, skyblue);
-    font-family: sans-serif;
-    height: 100vh;
-    color: #354358;
+  background-image: linear-gradient(to right bottom, #e8f3ec, skyblue);
+  font-family: sans-serif;
+  height: 100vh;
+  color: #354358;
 }
 
 .projects_section::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 .projects_section::-webkit-scrollbar-thumb {
-    background-image: linear-gradient(to right bottom, black, white);
-
+  background-image: linear-gradient(to right bottom, black, white);
 }
 
 .projects_section::-webkit-scrollbar-track {
-    background: #ffffff;
+  background: #ffffff;
 }
 
 /* scrollbar */
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-image: linear-gradient(to right bottom, #e8f3ec, skyblue);
+  background-image: linear-gradient(to right bottom, #e8f3ec, skyblue);
 }
 
 ::-webkit-scrollbar-track {
-    background: #ffffff;
+  background: #ffffff;
 }
 
 .icon_small {
-    width: 25px;
-    height: 25px;
+  width: 25px;
+  height: 25px;
 }
 
 .icon_large {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
 .icon_tiny {
-    width: 15px;
-    height: 15px;
+  width: 15px;
+  height: 15px;
 }
 
 .social_icons {
-    margin: 25px 0;
+  margin: 25px 0;
 }
 
 .social_icons :first-child {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .social_icon {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .social_icon:hover {
-    transform: scale(1.1);
-    transition: linear;
-    transition-duration: 0.3s;
+  transform: scale(1.1);
+  transition: linear;
+  transition-duration: 0.3s;
 }
 
 .custom_container {
-    padding-top: 50px;
-
+  padding-top: 50px;
 }
 
 .custom_row {
-    height: 90vh;
+  height: 90vh;
 }
 
 /* sidebar */
 .sideBar_custom {
-    background-color: #fff;
-    text-align: center;
-    border-radius: 20px;
-    height: 100%;
-    padding: 25px 15px;
-    box-shadow: 0 0 10px black;
-
+  background-color: #fff;
+  text-align: center;
+  border-radius: 20px;
+  height: 100%;
+  padding: 25px 15px;
+  box-shadow: 0 0 10px black;
 }
 
 .name {
-    margin: 20px 0;
-    font-family: 'Kaushan Script', cursive;
-
+  margin: 20px 0;
+  font-family: 'Kaushan Script', cursive;
 }
 
 .name span {
-    color: black;
+  color: black;
 }
 
 .bg-gray {
-    background-color: #F1F2F3;
+  background-color: #f1f2f3;
 }
 
 .side_item {
-    border-radius: 35px;
-    height: 40px;
-    font-size: 18px;
-    padding-top: 6PX;
-    margin-bottom: 8px;
+  border-radius: 35px;
+  height: 40px;
+  font-size: 18px;
+  padding-top: 6px;
+  margin-bottom: 8px;
 }
 
 .contact {
-    background-color: #dbdddf;
-    padding: 2px 0;
-    margin: 0 -15px;
+  background-color: #dbdddf;
+  padding: 2px 0;
+  margin: 0 -15px;
 }
 
 .contact .side_item {
-    margin-bottom: 1px;
-    font-size: 15px;
-
+  margin-bottom: 1px;
+  font-size: 15px;
 }
 
 .cv:hover,
 .github:hover {
-    cursor: pointer;
-    background-color: #F1F2F3;
-    color: #000
+  cursor: pointer;
+  background-color: #f1f2f3;
+  color: #000;
 }
 
 .email {
-    background-image: linear-gradient(to right bottom, skyblue, skyblue);
-    border-radius: 30px;
-    color: #fff;
-    margin: 15px 25px 0;
-    cursor: pointer;
+  background-image: linear-gradient(to right bottom, skyblue, skyblue);
+  border-radius: 30px;
+  color: #fff;
+  margin: 15px 25px 0;
+  cursor: pointer;
 }
 
 .email:hover {
-    background-image: linear-gradient(to right bottom, #0575E6, #00F260);
-    transition: 1s linear;
+  background-image: linear-gradient(to right bottom, #0575e6, #00f260);
+  transition: 1s linear;
 }
-
-
 
 .nav_heading {
-    font-size: 32px;
-    font-weight: 700;
-    color: #354358;
-    border-bottom: 4px solid black;
-
-
-
+  font-size: 32px;
+  font-weight: 700;
+  color: #354358;
+  border-bottom: 4px solid black;
 }
-
 
 .mainarea_custom {
-    background-color: #fff;
-    border-radius: 20px;
-    padding-top: 20px;
-    box-shadow: 0 0 10px black;
+  background-color: #fff;
+  border-radius: 20px;
+  padding-top: 20px;
+  box-shadow: 0 0 10px black;
 }
-
-
-
-
 
 /* #6E7E91 */
 .content_section {
-    padding: 20px 0;
+  padding: 20px 0;
 }
 
 .description {
-    margin-bottom: 20px;
-    padding: 20px;
-
+  margin-bottom: 20px;
+  padding: 20px;
 }
 
 .data_section {
-    background-color: #dbdddf;
-    padding-top: 20px;
-    margin: 0 -15px;
+  background-color: #dbdddf;
+  padding-top: 20px;
+  margin: 0 -15px;
 }
 
 .sub_heading {
-    margin-left: 10px;
-    font-size: 25px;
-    font-weight: 700;
-    color: #354358;
+  margin-left: 10px;
+  font-size: 25px;
+  font-weight: 700;
+  color: #354358;
 }
 
 .card_section {
-    display: flex;
+  display: flex;
 }
 
 .card_custom {
-    background-color: #fff;
-    margin: 10px;
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
-    border-radius: 10px;
+  background-color: #fff;
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .card_body {
-    margin-left: 15px;
+  margin-left: 15px;
 }
 
-
-.card_title {}
+.card_title {
+}
 
 .card_content {
-    color: #6E7E91;
-    font-size: 15px;
+  color: #6e7e91;
+  font-size: 15px;
 }
-
-
-
-
-
 
 /* navbar */
 .navbar {
-    display: flex;
+  display: flex;
 }
 
 .navItems {
-    display: flex;
+  display: flex;
 }
 
 .navItem {
-    margin-right: 20px;
-    text-decoration: none;
-    color: #354358;
-    font-size: 20px;
+  margin-right: 20px;
+  text-decoration: none;
+  color: #354358;
+  font-size: 20px;
 }
 
 .navItem:hover {
-    text-decoration: none;
-    color: #000;
+  text-decoration: none;
+  color: #000;
 }
 
 a {
-    color: #354358;
+  color: #354358;
 }
 
 a:hover {
-    text-decoration: none;
-
+  text-decoration: none;
 }
 
-
-
-
 .image_custom {
-    height: 110px;
-    width: 110px;
+  height: 110px;
+  width: 110px;
 }
 
 /* resume */
 .resume_section {
-    padding-top: 20px;
+  padding-top: 20px;
 }
 
 .resume_card_body {
-    margin-top: 15px;
-
+  margin-top: 15px;
 }
 
 .resume_card_title h5 {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .resume_card_description {
-    font-size: 13px;
-    padding-top: 20px;
+  font-size: 13px;
+  padding-top: 20px;
 }
 
 .skill_div {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .skill_wrapper {
-    width: 90%;
-    background-color: #F1F2F3;
-    border-radius: 20px;
+  width: 90%;
+  background-color: #f1f2f3;
+  border-radius: 20px;
 }
 
 .skill_beg {
-    width: 45%;
+  width: 45%;
 }
 
 .skill_avg {
-    width: 65%;
-
+  width: 65%;
 }
 
 .skill_verygood {
-    width: 80%;
-
+  width: 80%;
 }
 
 .skill_exp {
-    width: 95%;
+  width: 95%;
 }
 
 .skill {
-    background-image: linear-gradient(to right, gray, white);
-    border-radius: 20px;
-    color: #fff;
-    padding: 4px 14px;
-    display: flex;
-    justify-content: space-between;
-    font-size: 14px;
-    margin-bottom: 8px;
+  background-image: linear-gradient(to right, gray, white);
+  border-radius: 20px;
+  color: #fff;
+  padding: 4px 14px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  margin-bottom: 8px;
 }
 
 /* project section */
 .projects_section {
-    height: 70vh;
-    padding-top: 30px;
-    overflow-y: auto;
-
+  height: 70vh;
+  padding-top: 30px;
+  overflow-y: auto;
 }
 
 .projects_section_header {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .project_header_child {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .project_header_child:hover {
-    cursor: pointer;
-    color: #000;
+  cursor: pointer;
+  color: #000;
 }
 
 /* .project_card {
     height: 300px;
 } */
 .project_card {
-    text-align: center;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .project_name {
-    font-size: 17px;
+  font-size: 17px;
 }
 
 /* .project_image {
@@ -355,11 +326,10 @@ a:hover {
     margin-bottom: 10px;
 } */
 
-
 @media screen and (max-width: 991px) {
-    .mainarea_custom {
-        margin: 30px 0;
-    }
+  .mainarea_custom {
+    margin: 30px 0;
+  }
 }
 
 /* 
@@ -383,26 +353,23 @@ a:hover {
 } */
 
 .project_wrapper {
-
-    height: 100%;
-    width: 100%;
-    min-height: 140px;
-    /* background-position: center;
+  height: 100%;
+  width: 100%;
+  min-height: 140px;
+  /* background-position: center;
     background-size: cover;
     background-repeat: no-repeat; */
-    text-align: center;
-
+  text-align: center;
 }
 
 .project_image {
-    border-radius: 20px;
-    border: 1px solid #00F260;
-    width: 100%;
-    height: 80%;
-
+  border-radius: 20px;
+  border: 1px solid #00f260;
+  width: 100%;
+  height: 80%;
 }
 
 .project_image:hover {
-    transform: scale(1.02);
-    transition: 0.2s linear;
+  transform: scale(1.02);
+  transition: 0.2s linear;
 }
