--- a/src/Protfolio/main.css
+++ b/src/Protfolio/main.css
@@ -373,3 +373,10 @@ a:hover {
   transform: scale(1.02);
   transition: 0.2s linear;
 }
+
+h4 {
+  font-size: 20px;
+  color: #313034;
+  border-left: 5px solid #313034;
+  padding-left: 15px;
+}
